// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Genomic checkbox 1`] = `
{
  "checkbox": [
    {
      "name": "b",
      "selected": true,
      "value": "b",
    },
    {
      "name": "c",
      "selected": true,
      "value": "c",
    },
  ],
}
`;

exports[`Genomic checkbox w/options 1`] = `
{
  "checkbox": [
    {
      "name": "a",
      "selected": false,
      "value": "a",
    },
    {
      "name": "b",
      "selected": true,
      "value": "b",
    },
    {
      "name": "c",
      "selected": true,
      "value": "c",
    },
  ],
}
`;

exports[`Genomic handles multiple questions 1`] = `
[
  "",
  "",
]
`;

exports[`Genomic handles multiple questions 2`] = `[]`;

exports[`Genomic prompts user and correctly processes delayed input 1`] = `
[
  "",
]
`;

exports[`Genomic prompts user and correctly processes delayed input 2`] = `[]`;
